Port to gradle kotlin